--- a/aula04/ex001.html
+++ b/aula04/ex001.html
@@ -16,10 +16,8 @@
     <h1>Olá mundo!</h1>
     <p>Me livrei da maldição</p>
     <script>
-        window.alert('Minha primeira mensagem')
-        window.confirm('Está gostando de JS?')
-        window.prompt('Qual o su nome?')
-    
+        var nome= window.prompt('Qual o su nome?')
+        window.alert('a')
     </script>
 </body>
 </html>
